# IEP-Laborator

./: CMakeLists.txt  README.md
src/: device.cpp  device.hpp  deviceResource.cpp  laptop.cpp  main.cpp  smartdevice.cpp
